# http-server

./: .gitmodules  CMakeLists.txt  README.md
http/: CMakeLists.txt
http/include/: gzip.h  http.h
http/src/: gzip.cpp  http.cpp
server/: CMakeLists.txt
server/include/: file.h  uuid.h
server/src/: file.cpp  main.cpp  uuid.cpp
